--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 </head>
 <body>
     <noscript>
-        This website requires Javascript to be enabled. Please turn on Javascript
+        This website requires JavaScript to be enabled. Please turn on JavaScript
         and reload the page.
     </noscript>
 
